[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "flood-monitor"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "api-client @ git+https://github.com/jezhailwood/api-client.git@v0.1.0",
    "numpy",
    "plotly",
]

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = [
    "E", # pycodestyle error
    "F", # Pyflakes
    "I", # isort
    "B", # flake8-bugbear
    "UP", # pyupgrade
    "D", # pydocstyle
    "D401", # pydocstyle: non-imperative-mood
]

[tool.ruff.lint.pydocstyle]
convention = "google"
